--- a/index.html
+++ b/index.html
@@ -3,56 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>주소 검색 및 지도 표시</title>
-    <!-- 네이버 지도 API -->
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=8dogdvyumx&submodules=geocoder"></script>
+    <title>주소 검색 및 지도 표시 (OpenStreetMap)</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
         var map;
-        var geocoder;
 
         function initMap() {
-            // 지도 객체 생성 (서울을 중심으로 초기화)
-            map = new naver.maps.Map('map', {
-                center: new naver.maps.LatLng(37.5665, 126.9780), // 서울 위도, 경도
-                zoom: 10
-            });
-            geocoder = new naver.maps.Geocoder();
+            // OpenStreetMap 기본 지도 설정 (서울을 중심으로 초기화)
+            map = L.map('map').setView([37.5665, 126.9780], 13); // 서울 위도, 경도
+
+            // OpenStreetMap 타일 추가
+            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+            }).addTo(map);
         }
 
         function searchAddress() {
             var address = document.getElementById("address").value; // 입력된 주소 값
-            geocoder.geocode(address, function(status, response) {
-                if (status === naver.maps.Service.Status.OK) {
-                    // 위도와 경도 값 추출
-                    var lat = response.result.items[0].point.y;
-                    var lng = response.result.items[0].point.x;
+            var url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(address)}`;
 
-                    // 지도에 마커 추가
-                    var marker = new naver.maps.Marker({
-                        position: new naver.maps.LatLng(lat, lng),
-                        map: map
-                    });
+            // 주소 검색 API 호출
+            fetch(url)
+                .then(response => response.json())
+                .then(data => {
+                    if (data.length > 0) {
+                        var lat = data[0].lat;
+                        var lon = data[0].lon;
 
-                    // 지도 중심을 해당 위치로 이동
-                    map.setCenter(new naver.maps.LatLng(lat, lng));
+                        // 위도와 경도 출력
+                        document.getElementById("result").innerHTML = "위도: " + lat + ", 경도: " + lon;
 
-                    // 위도, 경도 출력
-                    document.getElementById("result").innerHTML = "위도: " + lat + ", 경도: " + lng;
-                } else {
-                    alert("주소를 찾을 수 없습니다.");
-                }
-            });
+                        // 지도에 마커 추가
+                        var marker = L.marker([lat, lon]).addTo(map);
+
+                        // 지도 중심을 해당 위치로 이동
+                        map.setView(new L.LatLng(lat, lon), 13);
+                    } else {
+                        alert("주소를 찾을 수 없습니다.");
+                    }
+                })
+                .catch(error => alert("오류가 발생했습니다: " + error));
         }
     </script>
 </head>
 <body onload="initMap()">
-    <h2>지역 검색 및 지도 표시</h2>
+    <h2>지역 검색 및 지도 표시 (OpenStreetMap)</h2>
     <!-- 주소 입력란 -->
     <input type="text" id="address" placeholder="주소를 입력하세요" />
     <button onclick="searchAddress()">검색</button>
 
     <!-- 위도, 경도 결과 출력 -->
-    <div id="result"></div>
+    <div id="result" style="margin-top: 10px; font-weight: bold;"></div>
 
     <!-- 지도 표시 -->
     <div id="map" style="width: 100%; height: 500px;"></div>
