--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>주소 검색 및 지도 표시 (OpenStreetMap)</title>
+    <title>위경도 거리 계산</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
         var map;
+        var searchLat, searchLon;
+
+        // 인천항과 부산항의 위경도
+        const incheonPort = { lat: 37.4747, lon: 126.6242 }; // 인천항
+        const busanPort = { lat: 35.0997, lon: 129.0409 }; // 부산항
 
         function initMap() {
             // OpenStreetMap 기본 지도 설정 (서울을 중심으로 초기화)
@@ -28,33 +33,86 @@
                 .then(response => response.json())
                 .then(data => {
                     if (data.length > 0) {
-                        var lat = data[0].lat;
-                        var lon = data[0].lon;
+                        searchLat = data[0].lat;
+                        searchLon = data[0].lon;
 
                         // 위도와 경도 출력
-                        document.getElementById("result").innerHTML = "위도: " + lat + ", 경도: " + lon;
+                        document.getElementById("result").innerHTML = "검색한 지역 위도: " + searchLat + ", 경도: " + searchLon;
 
                         // 지도에 마커 추가
-                        var marker = L.marker([lat, lon]).addTo(map);
+                        var marker = L.marker([searchLat, searchLon]).addTo(map);
 
                         // 지도 중심을 해당 위치로 이동
-                        map.setView(new L.LatLng(lat, lon), 13);
+                        map.setView(new L.LatLng(searchLat, searchLon), 13);
                     } else {
                         alert("주소를 찾을 수 없습니다.");
                     }
                 })
                 .catch(error => alert("오류가 발생했습니다: " + error));
         }
+
+        function calculateDistance() {
+            var selectedPort = document.getElementById("portSelect").value;
+            var thirdPort = selectedPort === "incheon" ? incheonPort : busanPort;
+
+            // 첫 번째 거리 (인천항과 검색한 지역)
+            var distance1 = haversine(incheonPort.lat, incheonPort.lon, searchLat, searchLon);
+            // 두 번째 거리 (검색한 지역과 선택한 항구)
+            var distance2 = haversine(searchLat, searchLon, thirdPort.lat, thirdPort.lon);
+
+            // 최종 거리 계산
+            var totalDistance = distance1 + distance2;
+
+            // 결과 출력
+            document.getElementById("totalDistance").innerHTML = "총 거리: " + totalDistance.toFixed(2) + " km";
+        }
+
+        // Haversine 공식을 사용하여 두 지점 간의 거리를 계산하는 함수
+        function haversine(lat1, lon1, lat2, lon2) {
+            var R = 6371; // 지구 반지름 (km)
+            var dLat = toRad(lat2 - lat1);
+            var dLon = toRad(lon2 - lon1);
+            var a =
+                Math.sin(dLat / 2) * Math.sin(dLat / 2) +
+                Math.cos(toRad(lat1)) * Math.cos(toRad(lat2)) *
+                Math.sin(dLon / 2) * Math.sin(dLon / 2);
+            var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+            var distance = R * c; // km 단위
+            return distance;
+        }
+
+        // 도(degree)를 radian으로 변환하는 함수
+        function toRad(deg) {
+            return deg * (Math.PI / 180);
+        }
     </script>
 </head>
 <body onload="initMap()">
-    <h2>지역 검색 및 지도 표시 (OpenStreetMap)</h2>
+    <h2>위경도 거리 계산</h2>
+    
     <!-- 주소 입력란 -->
     <input type="text" id="address" placeholder="주소를 입력하세요" />
     <button onclick="searchAddress()">검색</button>
 
-    <!-- 위도, 경도 결과 출력 -->
+    <br><br>
+
+    <!-- 드롭다운 (인천출항, 부산출항 선택) -->
+    <label for="portSelect">출항지 선택:</label>
+    <select id="portSelect">
+        <option value="incheon">인천출항</option>
+        <option value="busan">부산출항</option>
+    </select>
+
+    <br><br>
+
+    <!-- 총 거리 계산 버튼 -->
+    <button onclick="calculateDistance()">총 거리 계산</button>
+
+    <br><br>
+
+    <!-- 결과 출력 -->
     <div id="result" style="margin-top: 10px; font-weight: bold;"></div>
+    <div id="totalDistance" style="margin-top: 10px; font-weight: bold;"></div>
 
     <!-- 지도 표시 -->
     <div id="map" style="width: 100%; height: 500px;"></div>
